@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-28T08:17:13Z",
-  "count_outdated" : 421,
-  "uniques_outdated" : 227,
+  "timestamp" : "2022-07-28T16:17:45Z",
+  "count_outdated" : 422,
+  "uniques_outdated" : 228,
   "count" : 444,
   "uniques" : 239,
   "clones" : [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-15T00:00:00Z",
       "count": 2,
